# pytxtchat

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
note/: bot.ipynb  movie_pyspark.py
src/pytchat/: cli.py  com.py
src/pytxtchat/: cli.py
src/pytxtchat/bot/: movie_bot.py
src/pytxtchat/data/: manager.py
src/pytxtchat/data/movies/: movies.parquet  part-00000-2074f47d-d97c-470d-b84c-b65805c0b448-c000.snappy.parquet
src/pytxtchat/kafka/: consumer.py  producer.py
src/pytxtchat/textual/: chat.css  chat.py  chat.tcss  stopwatch.py  weather.py
tests/: test_com.py
