[project]
name = "pytxtchat"
version = "0.1.0"
description = "Python Terminal Chat Using Apache Kafka"
authors = [
    {name = "dMario24", email = "data.mario24@gmail.com"},
]
dependencies = [
    "textual>=0.77.0",
    "textual-dev>=1.5.1",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "GNU"}


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
pythonpath = "src"

[project.urls]
Homepage = "https://github.com/dMario24/pytxtchat"
Issues = "https://github.com/dMario24/pytxtchat/issues"

[project.scripts]
pytxtchat-ping = 'pytchat.cli:ping'
